(feat) avro, api changes, microservice streamlining